fix: Исправить ошибки согласно ревью_2