@@ -2,10 +2,12 @@ package ru.practicum.shareit.user.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.exception.InvalidEmailException;
 import ru.practicum.shareit.exception.EntityNotFoundException;
 import ru.practicum.shareit.exception.UserAlreadyExistException;
+import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.user.repository.UserRepository;
 import ru.practicum.shareit.user.repository.model.User;
 import ru.practicum.shareit.user.dto.UserMapper;
@@ -42,24 +44,25 @@ public class UserServiceImpl implements UserService {
     @Override
     public UserDto updateUser(UserDto userDto, Long id) {
         log.info("Пользователь успешно обновлен");
-        User user = userMapper.toUser(userDto);
+        User newUser = userMapper.toUser(userDto);
         checkUserExistence(id);
-        user.setId(id);
+        newUser.setId(id);
+        UserDto user = findUserById(id);
 
-        if (!Objects.equals(userDto.getEmail(),findUserById(id).getEmail())) {
-            checkEmailExistence(user);
+        if (!Objects.equals(newUser.getEmail(),user.getEmail())) {
+            checkEmailExistence(newUser);
         }
 
-        if (Objects.isNull(user.getEmail()) || user.getEmail().isBlank()) {
-            user.setEmail(findUserById(id).getEmail());
+        if (StringUtils.isBlank(newUser.getEmail())) {
+            newUser.setEmail(user.getEmail());
         }
 
-        if (Objects.isNull(user.getName()) || user.getName().isBlank()) {
-            user.setName(findUserById(id).getName());
+        if (StringUtils.isBlank(newUser.getName())) {
+            newUser.setName(user.getName());
         }
 
-        user = userRepository.updateUser(user, id);
-        return userMapper.toDTO(user);
+        newUser = userRepository.updateUser(newUser, id);
+        return userMapper.toDTO(newUser);
     }
 
     @Override
@@ -78,7 +81,7 @@ public class UserServiceImpl implements UserService {
     }
 
     private void checkEmail(UserDto userDto) {
-        if (Objects.isNull(userDto.getEmail()) || userDto.getEmail().isBlank()) {
+        if (StringUtils.isBlank(userDto.getEmail())) {
             throw new InvalidEmailException("Адрес электронной почты не может быть пустым.");
         }
     }
